# anemoi-cmems

./: .gitignore  LICENCE.txt  README.md  example-not-working.yaml  example-working.yaml  example.yaml  pyproject.toml  requirements.txt
anemoi_cmems/: cmems.py
tests/: test_plugin.py
