[build-system]
requires = [
  "setuptools>=60",
]

[project]
name = "anemoi-cmems"

version = "0.1.0"
description = "A source plugin for anemoi.datasets using copernicusmarine Python API"
readme = { text = "A source plugin for anemoi.datasets", content-type = "text/markdown" }

keywords = [
  "source",
  "datasets",
  "ai",
  "tools",
]

license = "Apache-2.0"
license-files = ['LICENCE.txt']
authors = [
  { name = "John Doe", email = "natalie.zelenka@ecmwf.int" },
]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]

dynamic = ["dependencies"]

urls.Homepage = "https://github.com/ecmwf/anemoi-plugins"

entry-points."anemoi.datasets.create.sources".cmems = "anemoi_cmems.cmems:CmemsPlugin"

[tool.setuptools]
packages = [ "anemoi_cmems"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}